--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Host=localhost; Database=DonationDB; Username=postgres; Password=CarlySan"
+    "DefaultConnection": "User ID=donationdb_z372_user;Password=BKfiVeOiL4fFecSlAFdrD9FjK4K3eXnd;Host=dpg-cskjsne8ii6s73fsg6hg-a;Port=5432;Database=donationdb_z372;Pooling=true;"
   }
+
 }
